--- a/.github/workflows/intel.yml
+++ b/.github/workflows/intel.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     # '*' is a special character in YAML, so string must be quoted
     - cron: "0 2 * * TUE"
+  pull_request:
+    branches:
+      - main  
   workflow_dispatch: ~
 
 jobs:
