Support single install from top-level directory (#263)
* Get pip install working

* Add pip install

* CI update

* Small cleanup

* Fix pybind11 detection

* Re-enable interface

* Path fix

* Add macos to CI

* Add back scipy to ci

* Update README

* Update CMakeLists.txt path in CI.

* Minor simplification

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -25,9 +25,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Install basix
+      - name: Install Basix
         run: |
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S .
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S ./cpp
           cmake --build build-dir
           cmake --install build-dir
           python3 -m pip install ./python
