Allow discontinuous elements (#260)
* Add e- prefix to element files and add discontinuous input

* Start working on discontinuous variants of spaces

* Write make_discontinuous function

* remove create_dlagrange

* Remove Lagrange space from lattice

* Use equispaced as default in moments (for now)

* Wrap new versions of create_element, remove DP family

* Add make_discontinuous to more spaces

* Correct the shape of M

* remove xtest

* remove prints

* branches, run intel tests on pr

* add braces, move exceptions up where possible

* Added docstring, Added discontinuous input to FiniteElement (this will be needed to compute a hash of the element, see #253)

* Add discontinuous()

* attempt to fix intel compiler

* column major?

* fix in intel compiler (hopefully)

* Update cpp/basix/finite-element.cpp

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

* Update cpp/basix/finite-element.h

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

* i -> it

* is -> if

* Update cpp/basix/finite-element.h

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

* no default continuity

* add comment about discontinuity

* false by default in Python wrapper

* make cpp and Python interfaces consistent

* }

Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -115,15 +115,15 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/polyset.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/precompute.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/quadrature.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/lagrange.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/nce-rtc.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/brezzi-douglas-marini.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/nedelec.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/raviart-thomas.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/regge.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/crouzeix-raviart.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/bubble.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/serendipity.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-lagrange.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-nce-rtc.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-brezzi-douglas-marini.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-nedelec.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-raviart-thomas.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-regge.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-crouzeix-raviart.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-bubble.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-serendipity.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/version.h)
 
 target_sources(basix PRIVATE
@@ -138,15 +138,15 @@ target_sources(basix PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/polyset.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/precompute.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/quadrature.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/lagrange.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/nce-rtc.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/brezzi-douglas-marini.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/nedelec.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/raviart-thomas.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/regge.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/crouzeix-raviart.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/bubble.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/basix/serendipity.cpp)
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-lagrange.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-nce-rtc.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-brezzi-douglas-marini.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-nedelec.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-raviart-thomas.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-regge.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-crouzeix-raviart.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-bubble.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/e-serendipity.cpp)
 
 # Configure the library
 set_target_properties(basix PROPERTIES PUBLIC_HEADER basix/finite-element.h)
