--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,26 +4,18 @@ requires = ["setuptools>=42", "wheel", "pybind11>=2.6.4", "cmake>=3.16", "scikit
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-build = ["cp*-manylinux_x86_64"]
-skip = ""
-test-skip = ""
+build = ["cp*-manylinux_x86-64", "cp*-manylinux_aarch64", "cp*-macosx_*"]
 
-archs = ["auto"]
-build-frontend = "pip"
-dependency-versions = "pinned"
-environment = {}
-build-verbosity = ""
-
-before-all = ""
-before-build = "yum -y update && yum install -y openblas-devel ninja-build"
-repair-wheel-command = ""
+archs = ["auto64"]
 
 test-command = "pytest -v -n 2 --durations 20 {project}/test/"
-before-test = ""
 test-requires = ["pytest", "pytest-xdist", "numpy", "sympy", "numba", "scipy"]
-test-extras = []
 
 manylinux-x86_64-image = "manylinux2014"
+manylinux-aarch64-image = "manylinux2014"
 
 [tool.cibuildwheel.linux]
-repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
+before-build = "yum -y update && yum install -y openblas-devel ninja-build"
+
+[tool.cibuildwheel.macos]
+before-build = "brew update && brew install ninja"
