--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -15,20 +15,21 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Setup QEMU (Linux)
-      - uses: docker/setup-qemu-action@v1.2.0
+        uses: docker/setup-qemu-action@v1.2.0
         with:
           image: tonistiigi/binfmt:latest
           platforms: aarch64
       
-      - uses: actions/setup-python@v2
-        name: Install Python
+      - name: Install Python
+        uses: actions/setup-python@v2
         with:
           python-version: '3.8'
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.2
-
-      - uses: actions/upload-artifact@v2
+      
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
 
@@ -38,14 +39,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-python@v2
-        name: Install Python
+      - name: Install Python
+        uses: actions/setup-python@v2
         with:
           python-version: '3.8'
 
       - name: Build sdist
         run: python setup.py sdist
-
-      - uses: actions/upload-artifact@v2
+      
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
           path: dist/*.tar.gz
