--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Setup QEMU (Linux)
+        if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v1.2.0
         with:
           image: tonistiigi/binfmt:latest
@@ -32,22 +33,3 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
-
-  build_sdist:
-    name: Build source distribution
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
-      - name: Build sdist
-        run: python setup.py sdist
-      
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          path: dist/*.tar.gz
