--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -1,12 +1,12 @@
 name: Build wheels
 
-# TODO: To adjust
-on: [pull_request]
+on: [push]
 
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    #if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-10.15, macos-11]
@@ -21,15 +21,47 @@ jobs:
           image: tonistiigi/binfmt:latest
           platforms: aarch64
 
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.2
+        env:
+          CIBW_ARCHS_LINUX: auto aarch64
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
+
+  build_sdist:
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    #if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install skbuild
+        run: python -m pip install skbuild
+
+      - name: Build sdist
+        run: python setup.py sdist
+
+      - uses: actions/upload-artifact@v2
+        with:
+          path: dist/*.tar.gz
+
+  upload_pypi:
+    needs: [build_wheels, build_sdist]
+    runs-on: ubuntu-latest
+    #if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: dist
+
+      - uses: pypa/gh-action-pypi-publish@v1.4.2
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TEST_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
+          #password: ${{ secrets.PYPI_TOKEN }}
+          #repository_url: https://pypi.org/legacy/
