--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install skbuild
-        run: python -m pip install skbuild
+        run: python -m pip install scikit-build
 
       - name: Build sdist
         run: python setup.py sdist
