--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -14,17 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup QEMU (Linux)
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v1.2.0
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: aarch64
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.2
         env:
-          CIBW_ARCHS_LINUX: auto aarch64
+          CIBW_ARCHS_LINUX: auto
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
@@ -49,6 +42,7 @@ jobs:
           path: dist/*.tar.gz
 
   upload_pypi:
+    name: Upload to PyPI
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     #if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
