--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools>=42", "wheel", "pybind11>=2.6.4", "cmake>=3.16", "scikit
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-build = ["cp{37,38,39}-manylinux_{x86_64}", "cp{37,38,39}-macosx_x86_64"]
+build = ["cp{37,38,39}-manylinux_x86_64", "cp{37,38,39}-macosx_x86_64"]
 
 test-command = "cmake -G Ninja -B build -S {project}/test/test_cmake && cmake --build build/ && build/a.out && pytest -v -n 2 --durations 20 {project}/test/"
 test-requires = ["pytest", "pytest-xdist", "numpy", "sympy", "numba", "scipy"]
