move interpolation to cpp

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -115,6 +115,7 @@ set(HEADERS_basix
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/element-families.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/finite-element.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/indexing.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/interpolation.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/lattice.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/log.h
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/maps.h
@@ -137,6 +138,7 @@ target_sources(basix PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/cell.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/dof-transformations.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/finite-element.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/basix/interpolation.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/lattice.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/log.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/basix/moments.cpp
