--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Example of CMakeLists.txt for downstream C++ project (e.g. DOLFINx)
-# Used to check correctly installed package during CI
+# Used to check correctly installed package during wheel creation.:
 cmake_minimum_required(VERSION 3.16)
 
 project(basix_test)
@@ -15,9 +15,17 @@ execute_process(
   ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
 if (BASIX_PY_DIR)
   message(STATUS "Adding ${BASIX_PY_DIR} to Basix search hints")
+  # Necessary when using pip-installed Basix
+  set(xtl_ROOT "${BASIX_PY_DIR};${xtl_ROOT}")
+  set(xsimd "${BASIX_PY_DIR};${xsimd_ROOT}")
+  set(xtensor_ROOT "${BASIX_PY_DIR};${xtensor_ROOT}")
 endif()
-find_package(xtl REQUIRED CONFIG HINTS ${BASIX_PY_DIR}/share/cmake/xtl)
 find_package(Basix REQUIRED CONFIG HINTS ${BASIX_PY_DIR})
+
+get_target_property(BASIX_DEFN Basix::basix INTERFACE_COMPILE_DEFINITIONS)
+if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
+  find_package(xsimd REQUIRED)
+endif()
 
 add_executable(a.out main.cpp)
 target_link_libraries(a.out PRIVATE Basix::basix)
