--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(basix_test)
 
-# Use Python for detecting UFC and Basix
+# Use Python for detecting Basix
 find_package(Python3 COMPONENTS Interpreter REQUIRED)
 
 # From DOLFINx
@@ -15,10 +15,13 @@ execute_process(
   ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
 if (BASIX_PY_DIR)
   message(STATUS "Adding ${BASIX_PY_DIR} to Basix search hints")
-  # Necessary when using pip-installed Basix
+  # Lines below are when using pip-installed Basix
   set(xtl_ROOT "${BASIX_PY_DIR};${xtl_ROOT}")
   set(xsimd "${BASIX_PY_DIR};${xsimd_ROOT}")
   set(xtensor_ROOT "${BASIX_PY_DIR};${xtensor_ROOT}")
+  # Lines below are necessary when using binary wheel Basix
+  set(CMAKE_BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+  set(CMAKE_INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
 endif()
 find_package(Basix REQUIRED CONFIG HINTS ${BASIX_PY_DIR})
 
