--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -19,9 +19,11 @@ if (BASIX_PY_DIR)
   set(xtl_ROOT "${BASIX_PY_DIR};${xtl_ROOT}")
   set(xsimd "${BASIX_PY_DIR};${xsimd_ROOT}")
   set(xtensor_ROOT "${BASIX_PY_DIR};${xtensor_ROOT}")
-  # Lines below are necessary when using binary wheel Basix
-  set(CMAKE_BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
-  set(CMAKE_INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+
+  if (IS_DIRECTORY ${BASIX_PY_DIR}/../fenics_basix.libs)
+    set(CMAKE_BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)  
+    set(CMAKE_INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)  
+  endif()
 endif()
 find_package(Basix REQUIRED CONFIG HINTS ${BASIX_PY_DIR})
 
