--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -19,11 +19,6 @@ if (BASIX_PY_DIR)
   set(xtl_ROOT "${BASIX_PY_DIR};${xtl_ROOT}")
   set(xsimd "${BASIX_PY_DIR};${xsimd_ROOT}")
   set(xtensor_ROOT "${BASIX_PY_DIR};${xtensor_ROOT}")
-
-  if (IS_DIRECTORY ${BASIX_PY_DIR}/../fenics_basix.libs)
-    set(CMAKE_BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)  
-    set(CMAKE_INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)  
-  endif()
 endif()
 find_package(Basix REQUIRED CONFIG HINTS ${BASIX_PY_DIR})
 
@@ -33,4 +28,8 @@ if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
 endif()
 
 add_executable(a.out main.cpp)
+if (BASIX_PY_DIR AND IS_DIRECTORY ${BASIX_PY_DIR}/../fenics_basix.libs)
+    set_target_properties(a.out BUILD_WITH_INSTALL_RPATH TRUE)
+    set_target_properties(a.out INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+endif()
 target_link_libraries(a.out PRIVATE Basix::basix)
