--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -64,15 +64,19 @@ jobs:
       - name: Install skbuild
         run: python -m pip install scikit-build
 
+      - name: Build bdist_wheel
+        run: python setup.py bdist_wheel
+
       - name: Build sdist
-        run: python setup.py sdist
+        run: python setup.py sdist --formats=bztar,gztar
 
       - uses: actions/upload-artifact@v2
         with:
-          path: dist/*.tar.gz
+          path: dist/*
 
   upload_pypi:
     name: Upload to PyPI
+    if: ${{ inputs.test_pypi_publish }} || ${{ inputs.pypi_publish }}
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     steps:
