Try rpath again.

--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -29,7 +29,7 @@ endif()
 
 add_executable(a.out main.cpp)
 if (BASIX_PY_DIR AND IS_DIRECTORY ${BASIX_PY_DIR}/../fenics_basix.libs)
-    set_target_properties(a.out PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
+    set_target_properties(a.out PROPERTIES BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
     set_target_properties(a.out PROPERTIES INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
 endif()
 target_link_libraries(a.out PRIVATE Basix::basix)
