Revert "Try again."
This reverts commit 3090ab01db5e0a4bbba9e2b3ac27f6afb19a0115.

--- a/test/test_cmake/CMakeLists.txt
+++ b/test/test_cmake/CMakeLists.txt
@@ -27,9 +27,9 @@ if("XTENSOR_USE_XSIMD" IN_LIST BASIX_DEFN)
   find_package(xsimd REQUIRED)
 endif()
 
-add_executable(basix-app main.cpp)
+add_executable(a.out main.cpp)
 if (BASIX_PY_DIR AND IS_DIRECTORY ${BASIX_PY_DIR}/../fenics_basix.libs)
-    set_target_properties(basix-app PROPERTIES INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+    set_target_properties(a.out PROPERTIES BUILD_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
+    set_target_properties(a.out PROPERTIES INSTALL_RPATH ${BASIX_PY_DIR}/../fenics_basix.libs)
 endif()
-target_link_libraries(basix-app PRIVATE Basix::basix)
-install(TARGETS basix-app RUNTIME)
+target_link_libraries(a.out PRIVATE Basix::basix)
