--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -66,9 +66,6 @@ jobs:
       - name: Install skbuild
         run: python -m pip install scikit-build
 
-      - name: Build bdist_wheel
-        run: python setup.py bdist_wheel
-
       - name: Build sdist
         run: python setup.py sdist --formats=bztar,gztar
 
@@ -77,8 +74,7 @@ jobs:
           path: dist/*
 
   upload_pypi:
-    name: Upload to PyPI
-    if: ${{ inputs.test_pypi_publish }} || ${{ inputs.pypi_publish }}
+    name: Upload to PyPI (optional)
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     steps:
