--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -63,7 +63,10 @@ jobs:
           pip install markdown
           pip install sphinx sphinx_rtd_theme
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-          cd doc && python make_html.py
+          cd doc/cpp
+          doxygen
+          cd ../python
+          make html
 
       - name: Upload C++ documentation artifact
         if: runner.os == 'Linux'
@@ -84,6 +87,13 @@ jobs:
           retention-days: 2
           if-no-files-found: error
 
+      - name: Build website documentation
+        if: runner.os == 'Linux'
+        run: |
+          export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
+          cd doc/web
+          python make_html.py
+
       - name: Set version name
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
@@ -92,7 +102,8 @@ jobs:
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
           export BASIX_VERSION=`python3 -c "import basix; print(basix.__version__)"`
-          cd doc && python make_html.py --url https://docs.fenicsproject.org/basix/${{ env.VERSION_NAME }}
+          cd doc/web
+          python make_html.py --url https://docs.fenicsproject.org/basix/${{ env.VERSION_NAME }}
       - name: Checkout FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         uses: actions/checkout@v2
@@ -106,7 +117,7 @@ jobs:
           cd docs
           git rm -r --ignore-unmatch basix/${{ env.VERSION_NAME }}
           mkdir -p basix/${{ env.VERSION_NAME }}
-          cp -r ../doc/html/* basix/${{ env.VERSION_NAME }}
+          cp -r ../doc/web/html/* basix/${{ env.VERSION_NAME }}
       - name: Commit and push documentation to FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
