--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,12 @@ cpp/basix/version.h
 doc/python/build/*
 doc/python/source/generated/*
 python/testing_build/
-doc/cpp/html/*
-doc/cpp/latex/*
-doc/html/*
-doc/_temp
-
-doc/python/source/_templates/layout.html
-doc/cpp/header.html
+doc/cpp/html
+doc/cpp/latex
+doc/web/html
+doc/web/_temp
+doc/web/python
+doc/web/cpp
 
 build*/
 
