--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -83,7 +83,7 @@ jobs:
         with:
           name: doc-python
           path: |
-            doc/python/html
+            doc/python/build/html
           retention-days: 2
           if-no-files-found: error
 
