--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy numba scipy
-          pytest -v -n auto --durations 20 test/
+          pytest -n auto --durations 20 test/
 
       - name: Build documentation
         if: runner.os == 'Linux'
