--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -39,6 +39,13 @@ jobs:
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
           python3 -m pip install git+https://github.com/FEniCS/ffcx.git
 
+      - name: Run cpp demos
+        run: |
+          cd demo/cpp
+          mkdir build && cd build
+          cmake .. && make
+          ./basix_demo
+
       - name: Get DOLFINx
         uses: actions/checkout@v2
         with:
