Add simple cpp demo (#322)
* add cpp demo

* update cmake

* update demo

* fix tests

* correct location of demos when building docs for web

* update gitignore location

* update location of python demos in test

* fix typo

* update cmake

Co-authored-by: Matthew Scroggs <matthew.w.scroggs@gmail.com>

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -39,12 +39,20 @@ jobs:
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
           python3 -m pip install git+https://github.com/FEniCS/ffcx.git
 
+      - name: Run cpp demos
+        run: |
+          cd demo/cpp
+          mkdir build && cd build
+          cmake .. && make
+          ./basix-demo
+
       - name: Get DOLFINx
         uses: actions/checkout@v2
         with:
           path: ./dolfinx
           repository: FEniCS/dolfinx
           ref: main
+
       - name: Install DOLFINx
         run: |
           cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build -S dolfinx/cpp/
