Update JOSS paper (#324)
* Update JOSS paper

* Add Makefile

* Put C++ demo in a folder

* put prints in the same order as Python

* 3

* adjust author criteria, and edit paper authors to match

* remove duplicate name

* Add second cpp demo and some improvements to test.py (#325)

* add second cpp demo and some improvements in test.py

* include cpp demo at end of python demo on website

Co-authored-by: Matthew Scroggs <matthew.w.scroggs@gmail.com>

Co-authored-by: Igor Baratta <igorbaratta@gmail.com>

--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -41,10 +41,7 @@ jobs:
 
       - name: Run cpp demos
         run: |
-          cd demo/cpp
-          mkdir build && cd build
-          cmake .. && make
-          ./basix-demo
+          python3 -m pytest demo/cpp/test.py
 
       - name: Get DOLFINx
         uses: actions/checkout@v2
